# NoGoalsNoGain

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: INTEGRATIONS.md  RELEASING.md
gan-harness/: build-report.md  eval-rubric.md  generator-state.md  preview.html  spec.md
gan-harness/feedback/: feedback-001.md  feedback-002.md  feedback-003.md
marketing/: README.md  _headers  index.html  styles.css
src/: main.ts  styles.css  types.ts  ui.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: domain.rs  lib.rs  main.rs  models.rs  store.rs
src-tauri/src/integrations/: adapter.rs  mod.rs  models.rs  registry.rs  store.rs  whoop.rs
